--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f8ae618b",
+   "id": "ea27fae1",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "506d1259",
+   "id": "5836dff2",
    "metadata": {},
    "source": [
     "---"
@@ -66,7 +66,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "39037fc45d3049dedd50ae4f0e6a35a7",
+     "checksum": "256ca1f00106703dba7ed3db798ffb44",
      "grade": false,
      "grade_id": "cell-ee764f0e965ac62a",
      "locked": true,
@@ -77,13 +77,16 @@
    },
    "outputs": [],
    "source": [
-    "# # Google Colab에서 하시는 경우 해당 셀을 먼저 실행해주시기 바랍니다.\n",
     "import sys\n",
+    "import warnings\n",
     "\n",
     "if \"google.colab\" in sys.modules:\n",
+    "    ## Colab에서 실행하는 경우 필요한 라이브러리를 미리 설치합니다.\n",
     "    !pip install category_encoders==2.*\n",
     "    !pip install pandas-profiling==2.*\n",
-    "    !pip install plotly==4.*"
+    "    !pip install plotly==4.*\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -310,7 +313,30 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "993e43cee7ecb4ffbb776eb62ae22c7f",
+     "checksum": "5d6a00959ce02b13843619023d70cbf7",
+     "grade": false,
+     "grade_id": "cell-850e285340b0bf34",
+     "locked": true,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = divide_donors_data_and_split(donors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9587b1e",
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "7896b2f0099b4b60cd374ba0365d8bde",
      "grade": true,
      "grade_id": "1-1_test",
      "locked": true,
@@ -322,7 +348,7 @@
    },
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = divide_donors_data_and_split(donors)"
+    "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)"
    ]
   },
   {
@@ -389,11 +415,10 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "51c91811f6aa10669a6f26b2ef54a011",
-     "grade": true,
-     "grade_id": "1-2_test",
+     "checksum": "e87ebb01aa8672f5ac8b52931b1d15d6",
+     "grade": false,
+     "grade_id": "cell-accf06cfcbb064e9",
      "locked": true,
-     "points": 1.5,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -432,16 +457,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a85431a9",
+   "id": "e4dfa7fc",
    "metadata": {
     "deletable": false,
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "4e99cda47ea6ab74ce88f25f64c8b53a",
-     "grade": false,
-     "grade_id": "cell-c52069bf790f179b",
+     "checksum": "20de5aaa39347fe8400ac0174f2cc79d",
+     "grade": true,
+     "grade_id": "1-2_test",
      "locked": true,
+     "points": 1.5,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -449,12 +475,12 @@
    },
    "outputs": [],
    "source": [
-    "print(\"test accuracy: \", test_accuracy)"
+    "print(\"Test accuracy:\", test_accuracy)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ce0fbcce",
+   "id": "81ee8b92",
    "metadata": {},
    "source": [
     "---"
@@ -462,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "308ea792",
+   "id": "683a5149",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
