--- a/Part2.ipynb
+++ b/Part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b848ee6d",
+   "id": "760b9a6a",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28d29a68",
+   "id": "1d8176b9",
    "metadata": {},
    "source": [
     "---"
@@ -66,7 +66,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "39037fc45d3049dedd50ae4f0e6a35a7",
+     "checksum": "256ca1f00106703dba7ed3db798ffb44",
      "grade": false,
      "grade_id": "cell-ee764f0e965ac62a",
      "locked": true,
@@ -77,13 +77,16 @@
    },
    "outputs": [],
    "source": [
-    "# # Google Colab에서 하시는 경우 해당 셀을 먼저 실행해주시기 바랍니다.\n",
     "import sys\n",
+    "import warnings\n",
     "\n",
     "if \"google.colab\" in sys.modules:\n",
+    "    ## Colab에서 실행하는 경우 필요한 라이브러리를 미리 설치합니다.\n",
     "    !pip install category_encoders==2.*\n",
     "    !pip install pandas-profiling==2.*\n",
-    "    !pip install plotly==4.*"
+    "    !pip install plotly==4.*\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -644,7 +647,30 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "6f61f6b080e56ab3954f9498afbf02fd",
+     "checksum": "2346871ccdf9a53c7a52139d8a230f9e",
+     "grade": false,
+     "grade_id": "cell-0a39ed110a60a802",
+     "locked": true,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "mae, r2 = calculate_baseline_score(homes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c69ce44",
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "4f40131cfd3cc204b1000113cddf8ff9",
      "grade": true,
      "grade_id": "2-1_test",
      "locked": true,
@@ -656,7 +682,6 @@
    },
    "outputs": [],
    "source": [
-    "mae, r2 = calculate_baseline_score(homes)\n",
     "print(f\"MAE: {mae:.2f}, R^2: {r2:.2f}\")"
    ]
   },
@@ -728,11 +753,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "ebb6fd61437ae9f2679e43ce578551cb",
+     "checksum": "6c8f3ed9c16e8c3b0824308fc0e441ab",
      "grade": true,
-     "grade_id": "2-2_test",
+     "grade_id": "cell-e010572bda30cde3",
      "locked": true,
-     "points": 1,
+     "points": 0,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -752,10 +777,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "46d7a9e80d7623252e339b6d7cdf751c",
-     "grade": false,
-     "grade_id": "cell-e010572bda30cde3",
+     "checksum": "66d82d49f5641993e69a8202f0d669d3",
+     "grade": true,
+     "grade_id": "2-2_test",
      "locked": true,
+     "points": 1,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -763,7 +789,7 @@
    },
    "outputs": [],
    "source": [
-    "train.shape, validation.shape, test.shape"
+    "print(train.shape, validation.shape, test.shape)"
    ]
   },
   {
@@ -830,11 +856,10 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "86c639c201ad5b425564e97972c2bb01",
-     "grade": true,
-     "grade_id": "2-3_test",
+     "checksum": "1a98e4e875ec2db862eaf2923b276edf",
+     "grade": false,
+     "grade_id": "cell-f532475a7b4a39d4",
      "locked": true,
-     "points": 1,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -856,10 +881,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "4908dd14e31b8b21b0402adbf678dc88",
-     "grade": false,
-     "grade_id": "cell-f532475a7b4a39d4",
+     "checksum": "749b7df21b9192c6caed50dc1f75519a",
+     "grade": true,
+     "grade_id": "2-3_test",
      "locked": true,
+     "points": 1,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -930,13 +956,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "69724eb8",
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "859234d86078c504094b764ec2bd7a94",
+     "grade": false,
+     "grade_id": "cell-a5d99365cd4ae1c9",
+     "locked": true,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "encoder, X_train_encoded, X_val_encoded, X_test_encoded = encoding_one_hot(\n",
+    "    X_train, X_val, X_test\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6495d0e4",
    "metadata": {
     "deletable": false,
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "502b5dfe4cdbfbfc267cbfe26d890168",
+     "checksum": "afbbdc4393d3fae14789eec8f99f69fa",
      "grade": true,
      "grade_id": "2-4_test",
      "locked": true,
@@ -948,9 +999,7 @@
    },
    "outputs": [],
    "source": [
-    "encoder, X_train_encoded, X_val_encoded, X_test_encoded = encoding_one_hot(\n",
-    "    X_train, X_val, X_test\n",
-    ")"
+    "print(X_train_encoded.shape, X_val_encoded.shape, X_test_encoded.shape)"
    ]
   },
   {
@@ -1019,7 +1068,30 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "fbdac4428a541a4bb494b5c1cf2c5be2",
+     "checksum": "195ba78b12b7a0c93b4b51d2316c0237",
+     "grade": false,
+     "grade_id": "cell-7214465622c969da",
+     "locked": true,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ridge, mae, r2 = fit_ridge_regression(X_train_encoded, X_val_encoded, y_train, y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f84191e2",
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "fc86d5719bd428d14eee685b835c1b0a",
      "grade": true,
      "grade_id": "2-5_test",
      "locked": true,
@@ -1031,10 +1103,10 @@
    },
    "outputs": [],
    "source": [
-    "ridge, mae, r2 = fit_ridge_regression(X_train_encoded, X_val_encoded, y_train, y_val)\n",
     "print(f\"alpha: {ridge.alpha_}\")\n",
     "print(f\"cv best score: {ridge.best_score_}\")\n",
-    "print(\"Ridge Regression 검증데이터 MAE: \", mae)"
+    "print(\"Ridge Regression 검증데이터 MAE: \", mae)\n",
+    "print(\"Ridge Regression 검증데이터 R^2: \", r2)  "
    ]
   },
   {
@@ -1105,11 +1177,10 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "1162f99dd79a9b00274f9a30fb9c5860",
-     "grade": true,
-     "grade_id": "2-6_test",
+     "checksum": "a4a8d5c10aab010003cc00a4511a0a66",
+     "grade": false,
+     "grade_id": "cell-7ec270609952377d",
      "locked": true,
-     "points": 1,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -1123,15 +1194,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9630b414",
+   "id": "3b1b31a1",
    "metadata": {
     "deletable": false,
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "13acf9f851e7dfa50dac8df5e1a84616",
+     "checksum": "05a4efae071d2b3388610bc07c282087",
      "grade": true,
-     "grade_id": "challenge_2-6_test",
+     "grade_id": "2-6_test",
      "locked": true,
      "points": 1,
      "schema_version": 3,
@@ -1146,8 +1217,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9630b414",
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "6f8ec595cdb416722db64f04dc15fa19",
+     "grade": true,
+     "grade_id": "challenge_2-6_test",
+     "locked": true,
+     "points": 1,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"test R2 > 0.75?:\", test_r2 > 0.75)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "eee22553",
+   "id": "5afd14ae",
    "metadata": {},
    "source": [
     "---"
@@ -1155,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "301358a8",
+   "id": "3041b2eb",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
