--- a/Part1_3.ipynb
+++ b/Part1_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "747a20dd",
+   "id": "8168451f",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6821f545",
+   "id": "af77e3a8",
    "metadata": {},
    "source": [
     "---"
@@ -96,7 +96,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "6ccc35d9eb61ec84fdda72e44083b6a2",
+     "checksum": "3f845e7c30a93a6fc9e559b7c590dfce",
      "grade": false,
      "grade_id": "cell-ee764f0e965ac62a",
      "locked": true,
@@ -109,6 +109,9 @@
    "source": [
     "# Google Colab을 사용하는 경우 해당 셀을 실행하세요\n",
     "import sys\n",
+    "import xgboost\n",
+    "import warnings\n",
+    "\n",
     "\n",
     "if \"google.colab\" in sys.modules:\n",
     "    # Install packages in Colab\n",
@@ -116,7 +119,10 @@
     "    !pip install eli5\n",
     "    !pip install pandas-profiling==2.*\n",
     "    !pip install pdpbox\n",
-    "    !pip install shap"
+    "    !pip install shap\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "xgboost.config.set_config(verbosity=0)"
    ]
   },
   {
@@ -128,7 +134,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "fcd5d0d9358b0d7734f8070a9c07e2e5",
+     "checksum": "743d362d5ffa7f2a1c7389693a61c88a",
      "grade": false,
      "grade_id": "cell-2602a05446403de0",
      "locked": true,
@@ -139,13 +145,6 @@
    },
    "outputs": [],
    "source": [
-    "# ignore warnings\n",
-    "import xgboost\n",
-    "import warnings\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "xgboost.config.set_config(verbosity=0)\n",
-    "\n",
     "# 데이터셋을 불러오기 위해 판다스 라이브러리를 불러옵니다\n",
     "import pandas as pd\n",
     "\n",
@@ -799,11 +798,10 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "59ecbc49ee1f571d6d275caf110fdc02",
-     "grade": true,
-     "grade_id": "2-2_test_code",
+     "checksum": "c49030938ca738867c381687e11b7db5",
+     "grade": false,
+     "grade_id": "cell-train",
      "locked": true,
-     "points": 0,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -839,7 +837,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "e47c884d927e9911914d9a6c5645a4aa",
+     "checksum": "a54fe57658ba1c12ddb13a9336b63653",
      "grade": false,
      "grade_id": "cell-get_auc",
      "locked": true,
@@ -850,10 +848,7 @@
    },
    "outputs": [],
    "source": [
-    "import warnings\n",
     "from sklearn.metrics import roc_curve, roc_auc_score\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "\n",
     "def plot_roc(y, y_pred_proba):\n",
@@ -1405,7 +1400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cae9f0c8",
+   "id": "db8a32eb",
    "metadata": {},
    "source": [
     "---"
@@ -1413,7 +1408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d5d4fab",
+   "id": "f8f7bcb1",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
