--- a/Part1_3.ipynb
+++ b/Part1_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8168451f",
+   "id": "319169a7",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af77e3a8",
+   "id": "0bf727e1",
    "metadata": {},
    "source": [
     "---"
@@ -798,7 +798,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "c49030938ca738867c381687e11b7db5",
+     "checksum": "1f09695262cb4bc5f54de07fa74b6f34",
      "grade": false,
      "grade_id": "cell-train",
      "locked": true,
@@ -809,8 +809,7 @@
    },
    "outputs": [],
    "source": [
-    "clf = fit(X_train, y_train)\n",
-    "# ignore graded result for this cell."
+    "clf = fit(X_train, y_train)"
    ]
   },
   {
@@ -1400,7 +1399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db8a32eb",
+   "id": "60f9cbc7",
    "metadata": {},
    "source": [
     "---"
@@ -1408,7 +1407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8f7bcb1",
+   "id": "b7be056d",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
