--- a/Part1_3.ipynb
+++ b/Part1_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "319169a7",
+   "id": "281d938c",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bf727e1",
+   "id": "9810bba1",
    "metadata": {},
    "source": [
     "---"
@@ -208,7 +208,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a28fd02f",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "f69ae8b385afc0be745ee2a15a1ebb42",
+     "grade": false,
+     "grade_id": "cell-13f1ea7d0f6248a1",
+     "locked": true,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
    "outputs": [],
    "source": [
     "test[\"Inspection Fail\"]"
@@ -1157,7 +1170,20 @@
   {
    "cell_type": "markdown",
    "id": "1d422067",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "nbgrader": {
+     "cell_type": "markdown",
+     "checksum": "a31e42784a2ac4b15eeebbb2a3595030",
+     "grade": false,
+     "grade_id": "cell-9210d46ba9b06c13",
+     "locked": true,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
    "source": [
     "## 3.2 1변수 PDP Plot을 생성하는 `get_pdp_isolated` 함수를 작성하세요.\n",
     "- `feature`의 특성을 변수로 하는 1변수 PDP Plot을 생성합니다."
@@ -1399,7 +1425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60f9cbc7",
+   "id": "bd62cd92",
    "metadata": {},
    "source": [
     "---"
@@ -1407,7 +1433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7be056d",
+   "id": "302114ad",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
