sc21x_onehot_fixed

--- a/Part2.ipynb
+++ b/Part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "760b9a6a",
+   "id": "782fa20e",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d8176b9",
+   "id": "e29c9390",
    "metadata": {},
    "source": [
     "---"
@@ -962,7 +962,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "859234d86078c504094b764ec2bd7a94",
+     "checksum": "df9b9f8e31a5e08f010131fc741ea1f5",
      "grade": false,
      "grade_id": "cell-a5d99365cd4ae1c9",
      "locked": true,
@@ -975,7 +975,7 @@
    "source": [
     "encoder, X_train_encoded, X_val_encoded, X_test_encoded = encoding_one_hot(\n",
     "    X_train, X_val, X_test\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -987,7 +987,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "afbbdc4393d3fae14789eec8f99f69fa",
+     "checksum": "5f483059998b7c6f8bfe56b76f8fd62d",
      "grade": true,
      "grade_id": "2-4_test",
      "locked": true,
@@ -999,7 +999,9 @@
    },
    "outputs": [],
    "source": [
-    "print(X_train_encoded.shape, X_val_encoded.shape, X_test_encoded.shape)"
+    "print(X_train_encoded.shape, X_val_encoded.shape, X_test_encoded.shape)\n",
+    "\n",
+    "print(OneHotEncoder(cols=['x','y','z']))"
    ]
   },
   {
@@ -1242,7 +1244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5afd14ae",
+   "id": "fbbdde64",
    "metadata": {},
    "source": [
     "---"
@@ -1250,7 +1252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3041b2eb",
+   "id": "40d3f92a",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
