sc21x_onehot_fixed

--- a/Part2.ipynb
+++ b/Part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "782fa20e",
+   "id": "746a590a",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e29c9390",
+   "id": "5a5d54e4",
    "metadata": {},
    "source": [
     "---"
@@ -987,7 +987,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "5f483059998b7c6f8bfe56b76f8fd62d",
+     "checksum": "afbbdc4393d3fae14789eec8f99f69fa",
      "grade": true,
      "grade_id": "2-4_test",
      "locked": true,
@@ -999,9 +999,7 @@
    },
    "outputs": [],
    "source": [
-    "print(X_train_encoded.shape, X_val_encoded.shape, X_test_encoded.shape)\n",
-    "\n",
-    "print(OneHotEncoder(cols=['x','y','z']))"
+    "print(X_train_encoded.shape, X_val_encoded.shape, X_test_encoded.shape)"
    ]
   },
   {
@@ -1244,7 +1242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbbdde64",
+   "id": "8d2478b1",
    "metadata": {},
    "source": [
     "---"
@@ -1252,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40d3f92a",
+   "id": "50bd3216",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
