--- a/n121-Bayes-Theorem/n121-Bayes Theorem.ipynb
+++ b/n121-Bayes-Theorem/n121-Bayes Theorem.ipynb
@@ -153,7 +153,7 @@
         "\n",
         "확률을 계산하는 방법에는 **두 가지**가 존재합니다. <br>\n",
         "  - **`method_1.`** 모든 경우의 확률을 진리표를 통해 확인하고, 원하는 경우의 확률을 더해줍니다.\n",
-        "  - **`method_2.`** 확인하고자 하는 경우의 확률만을 구하여 더해줍니다. \n",
+        "  - **`method_2.`** 확인하고자 하는 경우의 확률만을 곱하여 더해줍니다. \n",
         "\n",
         "우리는 아래 두 개의 시나리오 **a. 동전을 두 번 던졌을 때**와 **b. 동전을 세 번 던졌을 때**에 대하여 위의 두 가지 방법을 사용하여 확률을 확인하도록 합니다.\n",
         "\n",
@@ -382,7 +382,7 @@
         "<br>\n",
         "\n",
         "> ⚠️ <br>\n",
-        "하지만, 동전의 개수가 많아질수록 모든 경우를 나열하는 것은 쉬운 일이 아닙니다. <br>\n",
+        "하지만, 동전을 던지는 횟수가 많아질수록 모든 경우를 나열하는 것은 쉬운 일이 아닙니다. <br>\n",
         "그러기에 우리는 위와 같이 진리표가 아닌 **수학적 공식**을 이용해 이항분포를 계산하는 방법을 배워보도록 합니다.\n",
         "\n",
         "\n",
@@ -440,7 +440,7 @@
         "\n",
         "#### **b-1. 사건의 경우의 수 확인**\n",
         "\n",
-        "우리가 찾고자 하는 사건의 경우는 **`동전을 다섯 번 던져, 두 번의 앞면과 세 번의 뒷면 나오는 경우`**로서 이 경우가 나오는 모든 수를 확인하는 방법을 배워보도록 합니다. 이를 아래의 두 가지 방법을 비교해 보며 배워보도록 합니다. \n",
+        "우리가 찾고자 하는 사건의 경우는 **`동전을 다섯 번 던져, 두 번의 앞면과 세 번의 뒷면이 나오는 경우`**로서 이 경우가 나오는 모든 수를 확인하는 방법을 배워보도록 합니다. 이를 아래의 두 가지 방법을 비교해 보며 배워보도록 합니다. \n",
         "  - **`method_1.`** 동전을 던졌다는 것을 **`동전이 차지할 수 있는 위치`**라고 생각합니다. 그러면 다섯 개의 위치에서 **`두 개의 위치에 앞면`**이 차지하고, **`세 개의 위치에 동전의 뒷면`**이 차지할 수 있는 모든 경우를 확인합니다. \n",
         "  - **`method_2.`** 동전을 던졌을 때 원하는 사건이 차지할 수 있는 **`잠재적 위치의 개수`**를 세어 계산합니다. 동전을 던져 처음 앞면이 나오는 경우는 **`다섯 개의 잠재적 위치`**에 존재할 수 있습니다. 그리고 두 번째 앞면이 나오는 경우는 첫 번째 앞면에 의해 차지된 하나의 위치를 제외한 **`네 개의 잠재적 위치`**에 존재할 수 있습니다. 이를 곱한 뒤, 중복될 수 있는 경우의 수를 나누어 줍니다. \n",
         "\n",
@@ -494,7 +494,7 @@
         "**공평한 동전을 던졌을 때의 확률** <br>\n",
         "  - **`1.`** 동전을 다섯 번 던져 나올 수 있는 총 경우의 수는 $2^5 = 32$ 입니다.  \n",
         "  - **`2.`** 동전을 다섯 번 던져 두 개의 앞면이 나올 수 있는 경우의 수는 5!/(2!x3!) = 10 입니다. \n",
-        "  - **`3`** 동전을 다섯 번 던져 두 개의 앞면이 나올 확률은 10/32 = 0.3125 입니다.\n",
+        "  - **`3.`** 동전을 다섯 번 던져 두 개의 앞면이 나올 확률은 10/32 = 0.3125 입니다.\n",
         "\n",
         "<br>\n",
         "\n",
@@ -787,7 +787,7 @@
         "<img width='600' src='https://i.imgur.com/wo9R4Dt.png'>\n",
         "\n",
         "\n",
-        "위의 질문 **P(Cancer|Positive)**는 녹색원 안에 빨간 부분의 면적을 물어보는 질문입니다. <br>  즉, 암이 있고 테스트에서 positive라고 나온 사람의 수, $P(C \\cap  Pos)$를 암이 있던 없던 테스트에서 posotive로 나온 사람의 수, $P(Pos)$로 나눈 값을 물어보는 것입니다.\n",
+        "위의 질문 **P(Cancer|Positive)**는 녹색원 안에 빨간 부분의 면적을 물어보는 질문입니다. <br>  즉, 암이 있고 테스트에서 positive라고 나온 사람의 수 $P(C \\cap  Pos)$를 암이 있던 없던 테스트에서 posotive로 나온 사람의 수 $P(Pos)$로 나눈 값을 물어보는 것입니다.\n",
         "\n",
         "그리고 조건부 확률에 의해 이 면적은 아래의 공식을 통해 확인할 수 있었습니다. <br>\n",
         "$P(Pos|C) = P(C \\cap  Pos) / P(Pos)$ <br>\n",
@@ -819,7 +819,7 @@
         "\n",
         "<img width='600' src='https://i.imgur.com/GMUZ2h3.png'>\n",
         "\n",
-        "그러므로 답은 0.0833으로 **8.3%** 입니다. 암이 있을 확률 1%보다, 환자가 테스트에서 Positive하게 나온 것을 전제로 암이 있을 확률이 더 높아 진것을 확인할 수 있습니다.\n",
+        "그러므로 답은 0.0833으로 **8.3%** 입니다. 암이 있을 확률 1%보다, 환자가 테스트에서 Positive하게 나온 것을 전제로 암이 있을 확률이 더 높아진 것을 확인할 수 있습니다.\n",
         "\n",
         "<br>\n",
         "\n",
