--- a/n121-Bayes-Theorem/n121a-Bayes Theorem.ipynb
+++ b/n121-Bayes-Theorem/n121a-Bayes Theorem.ipynb
@@ -50,13 +50,13 @@
       "source": [
         "# 2. Blood Test\n",
         "\n",
-        "특정 질병을 가지고 있는 경우 **99%** 의 확률로 탐지할 수 있는 실험 방법이 있습니다.\n",
+        "특정 질병을 가지고 있는 경우 **`tpr`** 의 확률로 탐지할 수 있는 실험 방법이 있습니다.\n",
         "\n",
-        "그러나 동시에 이 방법은, **1%** 의 확률로 질병이 없지만 질병이 있다고 진단 하는 경우도 있는데요.\n",
+        "그러나 동시에 이 방법은 **`fpr`** 의 확률로 질병이 없지만 질병이 있다고 진단하는 경우도 있는데요.\n",
         "\n",
-        "실제로 모든 인구 중 **0.5%** 만이 이 질병을 가지고 있다고 하겠습니다.\n",
+        "실제로 모든 인구 중 이 질병을 가지고 있을 확률은 **`\bprior`** 입니다.\n",
         "\n",
-        "특정 사람이 이 방법을 통해 질병이 있다고 진단 받았을 때, 실제로 질병을 가지고 있을 확률을 구하는 함수를 작성하세요."
+        "특정 사람이 이 방법을 통해 질병이 있다고 진단 받았을때, 실제로 질병을 가지고 있을 확률을 구하는 함수를 작성하세요."
       ]
     },
     {
