--- a/Part1_3.ipynb
+++ b/Part1_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "281d938c",
+   "id": "0c1bfc8a",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9810bba1",
+   "id": "e55ba204",
    "metadata": {},
    "source": [
     "---"
@@ -348,13 +348,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "eb85d825",
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "7d23a59e9adf64e5bde344e5780b2384",
+     "grade": false,
+     "grade_id": "cell-f0a97a28a84cc7b8",
+     "locked": true,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "train_results, train_duplicated_rows = analysis_on_features(train)\n",
+    "test_results, test_duplicated_rows = analysis_on_features(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6d48003a",
    "metadata": {
     "deletable": false,
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "42ffc93b79421586a583bf89fe8ef8d4",
+     "checksum": "b4ffc670980b6aa79fc60e0e850ba149",
      "grade": true,
      "grade_id": "1-1_feature_test",
      "locked": true,
@@ -366,8 +390,6 @@
    },
    "outputs": [],
    "source": [
-    "train_results, train_duplicated_rows = analysis_on_features(train)\n",
-    "test_results, test_duplicated_rows = analysis_on_features(test)\n",
     "print(f\"Train df: duplicated? = {train_duplicated_rows}\\n\", train_results, \"\\n\\n\")\n",
     "print(f\"Test df: duplicated? = {test_duplicated_rows}\\n\", test_results)"
    ]
@@ -556,7 +578,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "932ae72c1adfab9642e0e610d0d94c23",
+     "checksum": "c7156e0a4a76317407b3e2639f700b59",
      "grade": true,
      "grade_id": "1-2_test",
      "locked": true,
@@ -570,7 +592,9 @@
    "source": [
     "train_processed = eda_process(train.copy())\n",
     "test_processed = eda_process(test.copy())\n",
-    "print(train_processed.shape, test_processed.shape)"
+    "print(train_processed.shape, test_processed.shape)\n",
+    "assert len(train_processed) == 59947, \"train data 전처리가 잘못되었습니다. 조건을 다시 확인하세요.\"\n",
+    "assert len(test_processed) == 19994, \"test data 전처리가 잘못되었습니다. 조건을 다시 확인하세요.\""
    ]
   },
   {
@@ -647,7 +671,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "cce3f960d1383bd4c8143872634c2627",
+     "checksum": "db2ed4c110814a19df1426a9c2e007c6",
      "grade": false,
      "grade_id": "cell-74769ab837a16066",
      "locked": true,
@@ -657,7 +681,8 @@
     }
    },
    "source": [
-    "## 2.1 데이터를 feature (X), label(y)로 분할하는 `divide_data` 함수를 작성하세요."
+    "## 2.1 데이터를 feature (X), label(y)로 분할하는 `divide_data` 함수를 작성하세요.\n",
+    "- Target Column은 `Inspection Fail`입니다."
    ]
   },
   {
@@ -725,7 +750,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "80b3786a2510c83c22f8ad523e88471a",
+     "checksum": "b6a426e2a8f1170007d06e405e09ae87",
      "grade": false,
      "grade_id": "cell-f54c8204c1a466c0",
      "locked": true,
@@ -740,7 +765,7 @@
     "- Boosting 모델을 사용하고자 할 경우 XGBoost를 사용하세요.\n",
     "- `RandomizedSearchCV`를 사용해 CV를 진행하세요.\n",
     "    - 적어도 두 개 이상의 하이퍼파라미터에 대해 탐색을 진행하세요.\n",
-    "    - auc score을 최대화하는 하이퍼파라미터 조합을 선택하세요.\n",
+    "    - **\bAUC score을 최대화하는 하이퍼파라미터 조합을 선택하세요.**\n",
     "- cv는 5 이하, n_iter은 10회 이하로 하세요."
    ]
   },
@@ -967,7 +992,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "fea0672ba09f1e0e208139dfb18c8d21",
+     "checksum": "29601a5ad69784a420bdd3d864156ebb",
      "grade": false,
      "grade_id": "p3_preprocess",
      "locked": false,
@@ -979,13 +1004,16 @@
    "outputs": [],
    "source": [
     "pipeline = clf.best_estimator_\n",
+    "\n",
+    "# TODO: pipeline을 preprocess_pipeline과 model로 나눠 주세요.\n",
     "preprocess_pipeline = None\n",
     "model = None\n",
-    "\n",
     "# YOUR CODE HERE\n",
     "\n",
     "\n",
     "# YOUR CODE ENDS HERE\n",
+    "\n",
+    "# TODO: X_test를 preprocess_pipeline에 통과시켜 X_test_preprocessed를 만드세요.\n",
     "X_test_preprocessed = None\n",
     "# YOUR CODE HERE\n",
     "\n",
@@ -1262,7 +1290,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "b03e8ed09a42a3dea4611776926c8517",
+     "checksum": "d3c61fa4d103827da9b6c069b6990d87",
      "grade": false,
      "grade_id": "cell-7060a1b0a5f0cc81",
      "locked": true,
@@ -1276,8 +1304,8 @@
     "- `True`/`False`로 답하고 그 이유를 한 줄로 작성하세요.\n",
     "\n",
     "\n",
-    "- **문제 1.** 위 Plot은 해당 특성에 따른 실제 label 값의 분포를 나타낸 것이다.\n",
-    "- **문제 2.** 위 Plot은 해당 특성에 따른 모델의 label 예측값의 분포를 나타낸 것이다.\n",
+    "- **문제 1.** 위 Plot은 해당 특성에 따른 실제 label값의 양상을 나타낸 것이다.\n",
+    "- **문제 2.** 위 Plot은 해당 특성에 따른 모델의 label 예측값의 양상을 나타낸 것이다.\n",
     "- **문제 3.** 선형회귀 모델(Linear Regression)에서 isolated PDP는 데이터의 분포와는 무관하게 항상 직선이다.\n",
     "- **문제 4.** 선형회귀 모델(Linear Regression)의 isolated PDP에서 여러 개의 서로 다른 ICE 곡선이 나올 수 있다.\n"
    ]
@@ -1290,7 +1318,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "48e304e0601de80131ff0be8f3f69ed5",
+     "checksum": "3ffba2f6720ac2c45b6c365e891609bd",
      "grade": false,
      "grade_id": "3-2_interpretation",
      "locked": false,
@@ -1301,13 +1329,13 @@
    },
    "outputs": [],
    "source": [
-    "answer_1 = None\n",
+    "answer_1 = False  # True / False\n",
     "reason_1 = \"\"\n",
-    "answer_2 = None\n",
+    "answer_2 = False  # True / False\n",
     "reason_2 = \"\"\n",
-    "answer_3 = None\n",
+    "answer_3 = False  # True / False\n",
     "reason_3 = \"\"\n",
-    "answer_4 = None\n",
+    "answer_4 = False  # True / False\n",
     "reason_4 = \"\"\n",
     "\n",
     "# YOUR CODE HERE\n",
@@ -1425,7 +1453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd62cd92",
+   "id": "295c4340",
    "metadata": {},
    "source": [
     "---"
@@ -1433,7 +1461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "302114ad",
+   "id": "88be91f0",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
