--- a/Part1_3.ipynb
+++ b/Part1_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0c1bfc8a",
+   "id": "c4708db5",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e55ba204",
+   "id": "220b9562",
    "metadata": {},
    "source": [
     "---"
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb85d825",
+   "id": "d91dddb4",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1259,7 +1259,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "960b1c3de09494cbdab05cf154d33f6f",
+     "checksum": "6cf27ae4202841b1f2b901ef4e3ae200",
      "grade": true,
      "grade_id": "3-2_test_code",
      "locked": true,
@@ -1274,12 +1274,7 @@
     "X_test_preprocessed_df = pd.DataFrame(X_test_preprocessed, columns=X_test.columns)\n",
     "feature = sorted(p_i, key=lambda x: x[1], reverse=True)[0][0]\n",
     "pdp_isolated = get_pdp_isolated(X_test_preprocessed_df, model, feature)\n",
-    "pdp_plot(pdp_isolated, feature_name=feature)\n",
-    "### BEGIN HIDDEN STATES\n",
-    "from pdpbox.pdp import PDPIsolate\n",
-    "\n",
-    "assert isinstance(pdp_isolated, PDPIsolate)\n",
-    "### END HIDDEN STATES"
+    "pdp_plot(pdp_isolated, feature_name=feature)"
    ]
   },
   {
@@ -1453,7 +1448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "295c4340",
+   "id": "67fadf44",
    "metadata": {},
    "source": [
     "---"
@@ -1461,7 +1456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88be91f0",
+   "id": "23614fbc",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
