sc23x_for_13_pi_bugfix

--- a/Part1_3.ipynb
+++ b/Part1_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "37fec884",
+   "id": "95a351ad",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d6dd966",
+   "id": "a9ae2798",
    "metadata": {},
    "source": [
     "---"
@@ -1029,7 +1029,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "9ed86c952af862e6c922bbe53f276bda",
+     "checksum": "fbe0d092dbf107a876b469ef12567988",
      "grade": false,
      "grade_id": "cell-82752ac26d440f73",
      "locked": true,
@@ -1041,7 +1041,7 @@
    "source": [
     "## 3.1 Permutation Importance를 계산하는 `get_permutation_importance` 함수를 작성하세요.\n",
     "- AUC score을 기준으로 Permutation Importance를 계산하는 permuter을 생성, fit하여 반환하세요.\n",
-    "- `n_iter=5`, `random_state=42`로 하세요."
+    "- `n_iter=5`로 하세요."
    ]
   },
   {
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f44b2e08",
+   "id": "d17eaf1e",
    "metadata": {},
    "source": [
     "---"
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17ee6eea",
+   "id": "f9af80e5",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
