update n123a - Hypothesis Test.ipynb

--- a/n123-Hypothesis-Test/n123a - Hypothesis Test.ipynb
+++ b/n123-Hypothesis-Test/n123a - Hypothesis Test.ipynb
@@ -110,12 +110,15 @@
         "\n",
         "$H_a$ : $\\mu_{sample} ≠ \\mu_{population}$ \n",
         "\n",
+        "- 데이터 불러오기 <br>\n",
+        "  [서울시 가로수 데이터셋](https://data.seoul.go.kr/dataList/367/S/2/datasetView.do)을 사용합니다. 다음 링크를 참조하세요. <br>\n",
+        "<https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/seoul_tree/seoul_tree.txt>\n",
+        "\n",
         "- 서울시 구별 `이팝나무` 데이터를 모집단으로 하였을 때, 10개의 구를 샘플링한 `이팝나무` 수의 평균과 모집단의 평균을 비교하는 가설검정을 시행하세요.   \n",
         "  - `서울시`, `공원녹지사업소`, `시설관리공단` 데이터는 제외합니다. \n",
         "  - 10개의 구를 중복을 허용하여 샘플링합니다. \n",
         "    - seed는 123으로 설정하세요. \n",
-        "  - scipy 라이브러리의 `.ttest_1samp()`를 사용합니다.\n",
-        "  \n",
+        "  - scipy 라이브러리의 `.ttest_1samp()`를 사용합니다. <br>\n",
         "    https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.ttest_1samp.html\n",
         "  - 가설검정 결과의 p-value 값을 `pv1`에 저장하세요. (`.pvalue`를 사용합니다.)"
       ],
