Update n113 & 114 - Data Wrangling.ipynb

--- a/n113 & 114 - Data Wrangling/n113 & 114 - Data Wrangling.ipynb
+++ b/n113 & 114 - Data Wrangling/n113 & 114 - Data Wrangling.ipynb
@@ -12112,7 +12112,7 @@
         "이 **차이가 특정 수준 이하라면 비열등성 검정이 성공했다고 확인**합니다.  \n",
         "\n",
         "인슐린제 임상실험에서는, 통상적으로 **혈당수치 변화가 `0.4%`정도 낮아졌다면, 혈당 조절 측면에서 치료제가 성공적**이라고 여겨집니다.  \n",
-        "따라서 `△=0.004`로 두고, Treatment difference를 통해 비열등성 검정을 확인해 봅시다.\n",
+        "따라서 `△=0.04%`로 두고, Treatment difference를 통해 비열등성 검정을 확인해 봅시다.\n",
         "\n",
         "<br>\n",
         "\n",
@@ -12313,7 +12313,7 @@
       "source": [
         "# Treatment difference 확인\n",
         "diff_value = upper_inj - upper_aural\n",
-        "diff_value # 0.004 미만이면, 비열등성 검정 성공"
+        "diff_value # 0.04% 미만이면, 비열등성 검정 성공"
       ]
     },
     {
