--- a/n111 & n112 - EDA/n111a-EDA(1).ipynb
+++ b/n111 & n112 - EDA/n111a-EDA(1).ipynb
@@ -52,8 +52,7 @@
         "\n",
         "- row가 아닌 column에 '매출액', '영업이익' 이 가도록 데이터를 transpose 하세요.\n",
         "\n",
-        "- 이후 아래 링크를 참조하여 첫번째 row를 column name으로 설정하세요.\n",
-        "\n",
+        "- 이후 아래 링크를 참조하여 첫번째 row를 column name으로 설정하세요. <br>\n",
         "  https://stackoverflow.com/questions/31328861/python-pandas-replacing-header-with-top-row\n",
         "\n",
         "- 데이터의 dimension을 확인하세요.\n",
@@ -86,19 +85,13 @@
         "\n",
         " ## $\\rm PDR = {시가총액 \\over 해당~기업이~포함된~전체~시장~규모(TAM)~\\times~시장점유율}$\n",
         "  - 변수 이름 `df3`로 데이터프레임을 생성합니다. 아래와 같은 형태이어야 합니다. \n",
-        "  - feature 이름은 `PDR`로, `df3['PDR']`을 통해 `~` 값이 확인되어야 합니다. 다음 전제조건을 활용하세요.\n",
+        "  - feature 이름은 `PDR`로, `df3['PDR']`을 통해 `~` 값이 확인되어야 합니다. \n",
         "    - PDR에 100을 곱한 백분율(%)을 구합니다. \n",
-        "    - 점유율 (일반 담배 기준) \n",
-        "      - 18년 : 62%\n",
-        "      - 19년 : 63.5% \n",
-        "    - 시장의 규모 \n",
-        "      - 18년 : 15조 \n",
-        "      - 19년 : 15조\n",
         "\n",
-        "||구분|종가|발행주식수|시가총액|시장점유율|PDR|\n",
-        "|:-:|:-:|:-:|:-:|:-:|:-:|:-:|\n",
-        "|0|18년|101500|137292497|13935188445500|62.0|~|\n",
-        "|1|19년|93800|137292497|12878036218600|63.5|~|"
+        "||구분|종가|발행주식수|시가총액|시장점유율|시장규모|PDR|\n",
+        "|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|\n",
+        "|0|18년|101500|137292497|13935188445500|62.0|15000000000000|~|\n",
+        "|1|19년|93800|137292497|12878036218600|63.5|15000000000000|~|"
       ],
       "metadata": {
         "id": "r6HbK4QN03sB"
@@ -122,8 +115,7 @@
         "\n",
         "- 와인 데이터셋을 사용합니다. \n",
         "\n",
-        "- 공식문서를 참조하여 중복된 데이터를 모두 확인해 봅니다.\n",
-        "\n",
+        "- 공식문서를 참조하여 중복된 데이터를 모두 확인해 봅니다. <br>\n",
         "  https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.duplicated.html "
       ],
       "metadata": {
